ligolang/src/test/contracts/negative/switch_jsligo/break_outside_case1.jsligo
let fn = (n : int) : string => {
    let output = "Hello";
    break;
    return output;
};